--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="家の中の在庫を管理するアプリケーションです"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo128.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
